--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accessible-icon": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.2",
+    "@splinetool/react-spline": "^2.2.6",
     "geist": "^1.2.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
