--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.2",
     "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.32",
     "framer-motion": "^10.16.16",
     "geist": "^1.2.0",
     "next": "14.0.4",
