--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@splinetool/runtime": "^1.0.32",
     "framer-motion": "^10.16.16",
     "geist": "^1.2.0",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
