Update project configuration, add GitHub Actions, and improve responsiveness
- Refactor tsconfig and eslint
- Update theme and layout
- Add GitHub Actions workflow and update to Node.js 20
- Update dependencies and package lock
- Improve responsiveness and tooltip behavior
- Fix various formatting and linting issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,15 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    ".next/types/**/*.ts",
+    "postcss.config.cjs",
+    "next.config.mjs"
+  ],
   "exclude": ["node_modules"]
 }
