--- a/package.json
+++ b/package.json
@@ -23,34 +23,35 @@
     ]
   },
   "dependencies": {
-    "@radix-ui/react-accessible-icon": "^1.0.3",
+    "@radix-ui/react-accessible-icon": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/themes": "^2.0.2",
+    "@radix-ui/themes": "^2.0.3",
     "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^1.0.32",
-    "framer-motion": "^10.16.16",
-    "geist": "^1.2.0",
-    "next": "^14.2.4",
+    "@splinetool/runtime": "^1.9.20",
+    "@vercel/blob": "^0.23.4",
+    "framer-motion": "^10.18.0",
+    "geist": "^1.3.1",
+    "next": "^14.2.7",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.9",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   }
 }
